corrected some spacing

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -13,7 +13,7 @@ a {
 
 .projects-head {
     text-align: center;
-    margin: 5rem;
+    margin: 2.5rem;
     color: darkgreen;
 }
 
